@@ -1,3 +1,14 @@
+2002-05-06  John Harper  <jsh@unfactored.org>
+
+	* More merging from HEAD:
+
+	2002-04-22  John Harper  <jsh@unfactored.org>
+
+	* functions.c (Fset_x_text_property): added optional fourth arg
+	ENCODING-ATOM. To allow #67397 to be fixed
+
+	* events.c: more focus change fallout
+
 2002-04-21  John Harper  <jsh@unfactored.org>
 
 	* Merged changes from HEAD:
